# aimmo-board

./: .gitignore  pyproject.toml  pytest.ini
backend/: app.py  config.py  errors.py  utils.py
backend/models/: Content.py  auth_token.py  board.py  comment.py  content.py  custom_queryset.py  like.py  post.py  subcomment.py  user.py
backend/rest/: post.py
backend/schemas/: auth.py  auth_schema.py  base.py  base_schema.py  board.py  board_schema.py  comment.py  comment_schema.py  like.py  like_schema.py  post.py  post_schema.py  subcomment.py  subcomment_schema.py  user.py  user_schema.py
backend/services/: auth.py  auth_service.py  board.py  board_service.py  comment.py  comment_service.py  like.py  like_service.py  post.py  post_service.py  subcomment.py  subcomment_service.py  user.py  user_service.py  user_sevice.py
backend/shared/: base_type.py  comments_order_type.py  content_type.py  like_type.py  post_order_type.py  user_post_type.py
backend/views/: auth.py  auth_view.py  base.py  base_view.py  boards.py  boards_view.py  comments.py  comments_view.py  decorators.py  likes.py  likes_view.py  posts.py  posts_view.py  subcomments.py  subcomments_view.py  users.py  users_view.py
backend_test/: conftest.py
backend_test/models/: test_auth_token.py  test_board.py  test_comment.py  test_post.py  test_user.py
backend_test/schemas/: test_base.py  test_board.py  test_board_schema.py  test_comment.py  test_comment_schema.py  test_like.py  test_like_schema.py  test_post.py  test_post_schema.py  test_user.py  test_user_schema.py
tests/: conftest.py
(+32 files in other folders)
