[tool.poetry]
name = "aimmo_pilot"
version = "0.1.0"
description = ""
authors = ["wonho <adler0311@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
python-dotenv = "^0.14.0"
pytest = "^6.1.1"
mongoengine = "^0.20.0"
pytest-flask = "^1.0.0"
flake8 = "^3.8.4"
marshmallow = "^3.8.0"
lorem-text = "^1.5"
Flask-Classful = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
